# pi-formulae

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/leibniz/: leibniz.cpp  leibniz.hpp
src/nilakantha/: nilakantha.cpp  nilakantha.hpp
src/ramanujan/: ramanujan.cpp  ramanujan.hpp
